fix spacing

--- a/src/styles/custom.css
+++ b/src/styles/custom.css
@@ -20,7 +20,7 @@
   }
 
   .header-default {
-    @apply py-2 bg-white border-b border-gray-400 md:pt-6 md:pb-3 md:relative dark:border-opacity-30 border-opacity-20 dark:bg-gray-900;
+    @apply py-2 bg-white border-b border-gray-400 md:pt-6 md:pb-4 md:relative dark:border-opacity-30 border-opacity-20 dark:bg-gray-900;
   }
 
   .header-container {
@@ -33,7 +33,7 @@
     }
 
     .header-default {
-      @apply py-2 bg-white border-b border-gray-700 md:pt-4 md:pb-2 md:relative dark:border-gray-300 dark:border-opacity-30 border-opacity-20 dark:bg-gray-900;
+      @apply py-2 bg-white border-b border-gray-700 md:pt-6 md:pb-4 md:relative dark:border-gray-300 dark:border-opacity-30 border-opacity-20 dark:bg-gray-900;
     }
   }
 
@@ -54,7 +54,7 @@
   }
 
   .nav-md-default {
-    @apply inline w-full h-full px-6 pt-2 pb-2 mx-2 text-base font-medium text-primary;
+    @apply inline w-full h-full px-6 pt-4 pb-4 mx-2 text-base font-medium text-primary;
   }
 
   .nav-active {
